--- a/public/2020/02/aes/truncated/advanced.yml
+++ b/public/2020/02/aes/truncated/advanced.yml
@@ -2,6 +2,7 @@
 comments: |
   AbstractXOR Mode Batch. Heuristique d'affectation = findFirst
   Pas d'utilisation des clusteurs de variables
+  Heuristique dynamique
 requirements:
   - name: gradle
     version: 4.9
@@ -19,7 +20,7 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: d66cb4b0558d236d6e4b6e274d3be86236411663
+  commit: 243b2bce7436ab3f071efbcf78f51bf3382aeeb4
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} {main_class}'
 experiments:
