--- a/public/2020/02/aes/truncated/global_batch.yml
+++ b/public/2020/02/aes/truncated/global_batch.yml
@@ -2,6 +2,7 @@
 comments: |
   AbstractXOR Mode Batch. Heuristique d'affectation = oneThenMin
   Pas d'utilisation des clusteurs de variables
+  Heuristique dynamique
 requirements:
   - name: gradle
     version: 4.9
@@ -19,7 +20,7 @@ shortcuts:
 versioning:
   repository: https://github.com/rloic/thesis-code
   authentication: true
-  commit: 6a936d8cd2fa4cda298f3152f3e3ceb04414f847
+  commit: 243b2bce7436ab3f071efbcf78f51bf3382aeeb4
 compile: 'gradle --build-file {PROJECT}/{gradle_conf} {gradle_task}'
 execute: '{java} {build}/{exec} {main_class}'
 experiments:
